--- a/Medicos/Medicos/Views/BuscarPacientePage.xaml
+++ b/Medicos/Medicos/Views/BuscarPacientePage.xaml
@@ -61,6 +61,7 @@
                 IsPullToRefreshEnabled="true"
                 IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}"
                 ItemsSource="{Binding Pacientes}"
+                    BackgroundColor="Transparent"
                 SeparatorVisibility="None"
                 RefreshCommand="{Binding RefreshCommand}">
                     <ListView.Header>
