--- a/Medicos/Medicos/Views/ReportarPacientePage.xaml
+++ b/Medicos/Medicos/Views/ReportarPacientePage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Medicos.Views.ReportarPacientePage"
@@ -66,6 +66,7 @@ xmlns:autocomplete="clr-namespace:Syncfusion.SfAutoComplete.XForms;assembly=Sync
                          ="{Binding FechaNacimientoSelected, Mode=TwoWay}" !-->
                         <customDP:CustomDatePicker
                             CornerRadius="18"  
+                          
                             IsCurvedCornersEnabled="True"    
                             NullableDate="{Binding FechaNacimientoSelected, Mode=TwoWay}"
                             PlaceHolder="Fecha Nacimiento" 
